...
        TopAppBar(
            title = {
                Text(
                    text = photoInfo?.title?._content?.ifEmpty { photo.title.ifEmpty { "Photo Details" } }
                        ?: photo.title.ifEmpty { "Photo Details" },
                    maxLines = 1,
                    modifier = Modifier.testTag("PhotoDetailTitle"),
                )
            },
            navigationIcon = {
                IconButton(onClick = onBackClick) {
                    Icon(
                        imageVector = Icons.Default.ArrowBack,
...
